--- a/contactus.html
+++ b/contactus.html
@@ -55,9 +55,9 @@
           <h2>هافركامب</h2>
           <img src="./img/contact/Verified_Badge.svg" alt="">
         </div>
-        <p> الوكيل الحصري لحمايات هافركامب الالمانية في الخليج
+        <p> الوكيل الحصري لحماية هافركامب الالمانية في الخليج
           <br>
-          الوكيل الحصري لحمايات كلايف ديزاين الكورية بالكويت
+          الوكيل الحصري لحماية كلايف ديزاين الكورية بالكويت
         </p>
       </div>
       <div class="contactus-link">
@@ -79,25 +79,31 @@
               <img src="./img/contact/whatsapp.png" alt="whatsapp">
               واتساب
             </li>
-            <!-- </a>
+          </a>
           <a href="https://www.snapchat.com/add/haverkampkw">
             <li>
               <img src="./img/contact/snapchat.png" alt="snapchat">
               سناب شات
             </li>
-          </a> -->
-            <!-- <a href="">
+          </a>
+          <a href="https://www.tiktok.com/@haverkampkw">
+            <li>
+              <img src="./img/contact/tiktok.png" alt="tiktok">
+              تيك توك
+            </li>
+          </a>
+          <a href="https://x.com/haverkampkw">
             <li>
               <img src="./img/contact/twitter.png" alt=" x">
               تويتر
             </li>
-          </a> -->
-            <a href="https://maps.app.goo.gl/64mi62iDULehUyie8">
-              <li>
-                <img src="./img/contact/map.png" alt="snapchat">
-                اللوكيشن
-              </li>
-            </a>
+          </a>
+          <a href="https://maps.app.goo.gl/64mi62iDULehUyie8">
+            <li>
+              <img src="./img/contact/map.png" alt="snapchat">
+              اللوكيشن
+            </li>
+          </a>
         </ul>
       </div>
     </div>
