--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="haverkamp | هافركامب" />
   <meta property="og:description"
-    content="الوكيل الحصري لحمايات هافركامب الالمانية في الشرق الاوسط وحمايات كلايف ديزاين الكورية في الخليج" />
+    content="الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط وحماية كلايف ديزاين الكورية في الخليج" />
   <meta property="og:image" content="https://example.com/image.jpg" />
   <meta property="og:url" content="https://haverkampkw.com" />
   <meta property="og:type" content="website" />
@@ -55,6 +55,7 @@
         <li><a class="main-nav-link" href="#why-us">لماذا نحن</a></li>
         <li><a class="main-nav-link" href="#gallery"> معرض الصور</a></li>
         <li><a class="main-nav-link" href="#testimonials"> اراءالعملاء</a></li>
+        <li><a class="main-nav-link" href="./terms.html"> البنود والشروط</a></li>
         <li><a class="main-nav-link" href="./contactus.html"> تواصل معنا</a></li>
       </ul>
     </nav>
@@ -75,8 +76,8 @@
             هافركامب
           </h1>
           <p class="hero-description">
-            الوكيل الحصري لحمايات هافركامب الالمانية في الشرق الاوسط
-            الوكيل الحصري لحمايات كلايف ديزاين الكورية
+            الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط
+            الوكيل الحصري لحماية كلايف ديزاين الكورية
             <br>
             <br>
             مليت من الشركات اللي تجص عليك وتركب ليك حماية سيئة وتقول لك انها
@@ -148,31 +149,33 @@
 
         </div>
         <div class="services-box">
-          <img src="./img/main_page/tint.png" alt="handball">
+          <img src="./img/main_page/tint.png" alt="tint">
           <div class="services-info">
-            <h3> عازل</h3>
+            <a href="./tint.html">
+              <h3> عازل</h3>
+            </a>
           </div>
         </div>
         <div class="services-box">
-          <img src="./img/main_page/painting.jpg" alt="handball">
+          <img src="./img/main_page/painting.jpg" alt="painting">
           <div class="services-info">
             <h3> صبغ</h3>
           </div>
         </div>
         <div class="services-box">
-          <img src="./img/main_page/polishing.png" alt="handball">
+          <img src="./img/main_page/polishing.png" alt="polish">
           <div class="services-info">
             <h3>بوليش </h3>
           </div>
         </div>
         <div class="services-box">
-          <img src="./img/main_page/swarfsky.webp" alt="handball">
+          <img src="./img/main_page/swarfsky.webp" alt="accessories">
           <div class="services-info">
             <h3> اكسسوارات</h3>
           </div>
         </div>
         <div class="services-box">
-          <img src="./img/main_page/wash.png" alt="handball">
+          <img src="./img/main_page/wash.png" alt="wash">
           <div class="services-info">
             <h3>غسيل </h3>
           </div>
@@ -194,7 +197,7 @@
           <li>
             <i class="fa-solid fa-chart-line"></i>خبرة اكثر من 14 عام
           </li>
-          <li> <i class="fa-solid fa-fire"></i> نهتم بادق التفاصيل</li>
+          <li> <i class="fa-solid fa-circle-info"></i> نهتم بادق التفاصيل</li>
 
         </ul>
       </div>
@@ -419,11 +422,12 @@
       </div>
     </section>
   </main>
+  <!-- start footer -->
   <div class="footer" id="contacts-us">
     <div class="container">
       <div class="box">
         <h3>هافركامب</h3>
-        <ul class="social">
+        <!-- <ul class="social">
           <li>
             <a href="tel:51111154" class="phone">
               <i class="fa-solid fa-mobile-screen-button fa-2x"></i>
@@ -445,18 +449,12 @@
             </a>
           </li>
         </ul>
-        <p class="text">تابعونا على منصات التواصل الاجتماعي</p>
+        -->
+        <p class="text"> الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط <br> الوكيل الحصري لحماية كلايف ديزاين
+          الكورية</p>
+
       </div>
-      <!-- <div class="box">
-        <ul class="links">
-          <li><a href="./protication.html">حماية</a></li>
-          <li><a href="./tint.html">عازل</a></li>
-          <li><a href="./polishing.html">بوليش</a></li>
-          <li><a href="./polishing.html">صبغ</a></li>
-          <li><a href="#">غسيل</a></li>
-          <li><a href="#">اكسسوارات</a></li>
-        </ul>
-      </div> -->
+
       <div class="box">
         <div class="line">
           <i class="fa-solid fa-house fa-2x"></i>
