--- a/protication.html
+++ b/protication.html
@@ -53,10 +53,10 @@
 
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a class="main-nav-link" href="#services">خدمتنا</a></li>
-        <li><a class="main-nav-link" href="#why-us">لماذا نحن</a></li>
+        <li><a class="main-nav-link" href="#features"> انواع الحماية</a></li>
         <li><a class="main-nav-link" href="#gallery"> معرض الصور</a></li>
         <li><a class="main-nav-link" href="#testimonials"> اراءالعملاء</a></li>
+        <li><a class="main-nav-link" href="./terms.html"> البنود والشروط</a></li>
         <li><a class="main-nav-link" href="./contactus.html"> تواصل معنا</a></li>
       </ul>
     </nav>
@@ -504,44 +504,39 @@
       </div>
     </section>
   </main>
+  <!-- start footer -->
   <div class="footer" id="contacts-us">
     <div class="container">
       <div class="box">
         <h3>هافركامب</h3>
-        <ul class="social">
-          <li>
-            <a href="tel:51111154" class="phone">
-              <i class="fa-solid fa-mobile-screen-button fa-2x"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://wa.me/96551111154" target="_blank" class="whatsapp">
-              <i class="fab fa-whatsapp fa-2x"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/haverkampkw/" target="_blank" class="instagram">
-              <i class="fab fa-instagram fa-2x"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.snapchat.com/add/haverkampkw" target="_blank" class="snapchat">
-              <i class="fab fa-snapchat fa-2x"></i>
-            </a>
-          </li>
-        </ul>
-        <p class="text">تابعونا على منصات التواصل الاجتماعي</p>
+        <!-- <ul class="social">
+            <li>
+              <a href="tel:51111154" class="phone">
+                <i class="fa-solid fa-mobile-screen-button fa-2x"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://wa.me/96551111154" target="_blank" class="whatsapp">
+                <i class="fab fa-whatsapp fa-2x"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/haverkampkw/" target="_blank" class="instagram">
+                <i class="fab fa-instagram fa-2x"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.snapchat.com/add/haverkampkw" target="_blank" class="snapchat">
+                <i class="fab fa-snapchat fa-2x"></i>
+              </a>
+            </li>
+          </ul>
+          -->
+        <p class="text"> الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط <br> الوكيل الحصري لحماية كلايف ديزاين
+          الكورية</p>
+
       </div>
-      <!-- <div class="box">
-        <ul class="links">
-          <li><a href="./protication.html">حماية</a></li>
-          <li><a href="./tint.html">عازل</a></li>
-          <li><a href="./polishing.html">بوليش</a></li>
-          <li><a href="./polishing.html">صبغ</a></li>
-          <li><a href="#">غسيل</a></li>
-          <li><a href="#">اكسسوارات</a></li>
-        </ul>
-      </div> -->
+
       <div class="box">
         <div class="line">
           <i class="fa-solid fa-house fa-2x"></i>
@@ -567,26 +562,26 @@
     </p>
   </div>
   <!-- <div class="designer">
-    <p class="copyright">Made With &#10084; By a7med206</p>
-    <ul class="social-a7med">
-      <li>
-        <a href="tel:65811402" class="phone">
-          <i class="fa-solid fa-mobile-screen-button"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://wa.me/96565811402" target="_blank" class="whatsapp">
-          <i class="fab fa-whatsapp fa-2x"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/a7med206/" target="_blank" class="instagram">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
-      </li>
-    </ul>
-
-  </div> -->
+      <p class="copyright">Made With &#10084; By a7med206</p>
+      <ul class="social-a7med">
+        <li>
+          <a href="tel:65811402" class="phone">
+            <i class="fa-solid fa-mobile-screen-button"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://wa.me/96565811402" target="_blank" class="whatsapp">
+            <i class="fab fa-whatsapp fa-2x"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/a7med206/" target="_blank" class="instagram">
+            <i class="fab fa-instagram fa-2x"></i>
+          </a>
+        </li>
+      </ul>
+  
+    </div> -->
   <!-- End Footer -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></script>
   <script src="./js/slider.js"></script>
